kubernetes/apps/kube-system/envoy-ai-gateway/gateway/gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname aigateway.goyangi.io
spec:
  gatewayClassName: envoy-ai-gateway
  addresses:
    - type: IPAddress
      value: 192.168.1.120
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 192.168.1.120
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.goyangi.io"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.goyangi.io"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: goyangi-io-tls
